K1J-370: add new field to acroForm